# galeed

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
okf/: index.md
okf/concepts/: event-spine.md  index.md  llm-debugging.md
okf/modules/: cairn.md  cli-web.md  events.md  index.md  llm-calls.md  recorder-bus.md
src/galeed/: __init__.py  bus.py  cairn.py  cli.py  events.py  feedback.py  hooks.py  llm_calls.py  recorder.py  web.py
tests/: test_cairn.py  test_hooks.py  test_llm_calls.py  test_schema.py  test_trace.py  test_web.py
