[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galeed"
version = "0.1.0"
description = "Galeed — the cross-project trace/log spine: a structured event stream separating process telemetry from final output."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "gellsmore-svg"},
]
keywords = [
    "logging",
    "tracing",
    "observability",
    "event-stream",
    "telemetry",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
# Intentionally dependency-free: the spine is pure stdlib so any project can adopt it.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
